Change ui-lovelace to UI-version Remove not working apple_tv integration Add HomeKit integration Move sensors and lights to their own yaml files

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 .HA_VERSION
 tts
 deps
-.storage
+core
 .cloud
 *.log
 *.db
+.storage
 custom_components
 www
 known_devices.yaml
@@ -14,6 +15,7 @@ c.yaml
 # Device configuration files
 *.conf
 .uuid
+.homekit.state
 
 # Secrets
 secrets.yaml
