--- a/configuration.yaml
+++ b/configuration.yaml
@@ -14,12 +14,8 @@ asuswrt:
     host: 192.168.1.1
     username: !secret asus_username
     password: !secret asus_password
-
+    
 apple_tv:
-  - host: 192.168.1.44
-    login_id: !secret apple_tv
-    name: Vardagsrum
-    start_off: true
 
 media_player:
   - platform: onkyo
@@ -43,7 +39,7 @@ sector_alarm:
   email: !secret sec_username
   password: !secret sec_password
   alarm_id: !secret sec_alam_id
-  code: <Your pin code to asm/disarm, optional>
+#  code: <Your pin code to asm/disarm, optional>
   thermometers: false
   alarm_panel: true
 
@@ -52,6 +48,15 @@ wake_on_lan:
 system_health:
 
 ios:
+
+homekit:
+  filter:
+    include_domains:
+      - alarm_control_panel
+      - light
+      - media_player
+      - switch
+      - sensor
 
 volvooncall:
   username: !secret voc_username
@@ -84,6 +89,9 @@ homeassistant:
   time_zone: Europe/Stockholm
   # Customization file
   customize: !include customize.yaml
+  
+hacs:
+  token: !secret hacs_token
 
 zone:
   # This will override the default home zone
@@ -93,26 +101,6 @@ zone:
     radius: 100
     icon: mdi:account-multiple
     track_ios: false
-
-lovelace:
-  mode: yaml
-
-# Light groups
-light:
-  - platform: group
-    name: Bordslampa
-    entities:
-      - light.bordslampa_1_2
-      - light.bordslampa_2_2
-      - light.bordslampa_3
-
-  - platform: group
-    name: Hall
-    entities:
-      - light.hall_1
-      - light.hall_2
-      - light.hall_3
-      - light.hall_4
 
 # Enables the frontend
 frontend:
@@ -127,18 +115,6 @@ recorder:
   purge_keep_days: 2
 
 http:
-  # Secrets are defined in the file secrets.yaml
-  #api_password: !secret http_password
-  # Uncomment this if you are using SSL/TLS, running in Docker container, etc.
-  # base_url: example.duckdns.org:8123
-
-# Checks for available updates
-# Note: This component will send some information about your system to
-# the developers to assist with development of Home Assistant.
-# For more information, please see:
-# https://home-assistant.io/blog/2016/10/25/explaining-the-updater/
-  # Optional, allows Home Assistant developers to focus on popular components.
-  # include_used_components: true
 
 # Discover some devices automatically
 discovery:
@@ -189,37 +165,6 @@ sun:
 #      homeassistant.components.sector_alarm: debug
 #      homeassistant.components.tellduslive_custom: debug
 
-# Weather prediction
-sensor:
-  - platform: yr
-    name: Yr
-    forecast: 10
-    monitored_conditions:
-      - temperature
-      - windSpeed
-  - platform: template
-    sensors:
-      router:
-        value_template: '{% if is_state("binary_sensor.router", "on") %} {{ states.binary_sensor.router.attributes.round_trip_time_avg }} {% else %}Offline{% endif %}'
-        unit_of_measurement: 'ms'
-      google:
-        value_template: '{% if is_state("binary_sensor.google", "on") %} {{ states.binary_sensor.google.attributes.round_trip_time_avg }} {% else %}Offline{% endif %}'
-        unit_of_measurement: 'ms'
-  - platform: tellstick
-    only_named:
-     - id: 183
-       name: Altan
-     - id: 135
-       name: Vind
-     - id: 151
-       name: Garage
-     - id: 167
-       name: Växthus
-     - id: 156
-       name: Förråd
-     - id: 199
-       name: Nivell
-
 # Text to speech
 tts:
   - platform: google_translate
@@ -228,3 +173,5 @@ tts:
 group: !include groups.yaml
 automation: !include automations.yaml
 script: !include scripts.yaml
+sensor: !include sensors.yaml
+light: !include lights.yaml
